# pa-sup-dp-orc

./: .gitignore  PROJECT_HISTORY_AND_MAINTENANCE.md  README.md  RELEASE_CHECKLIST.md  RELEASE_NOTES_v2.0.0.md  RELEASE_SUMMARY.md  app.go  config.yaml  go.mod  go.sum  main.go  package.json  wails.json
.github/workflows/: build.yml  release.yml
docs/: installation.md  user-guide.md
docs/improvements/: 01-ORCHESTRATOR_JSON_PARSING.md  02-IMPROVEMENTS-SUMMARY.md  03-L0-CODER-FIXES.md  04-L1-REGRESSION-ANALYSIS.md  05-L1-REGRESSION-FIXES-COMPLETE.md
docs/permissions/: README.md  linux.md  macos.md  windows.md
docs/planning/: CHECKLIST_USAGE.md  COMPREHENSIVE_QA_PLAN.md  IMPLEMENTATION_PLAN.md  PairAdmin_PRD_v2.0.md  QA_CHECKPOINTS.md  TASK_EXAMPLE.md
docs/tasks/: 1.1-initialize-go-module.md  1.2-scaffold-wails-project.md  1.3-setup-gitignore.md  1.3-spec.md  1.4-create-install-deps-script.md  1.4-spec.md  1.5-create-ci-workflow.md  1.5-spec.md  2.1-coder-context.json  2.1-context.json  2.1-implementation-complete.md  2.1-implementation.md  (+62 more)
frontend/: index.html  package-lock.json
orchestrator/: README.md  pyproject.toml  requirements.txt
orchestrator/docs/: 01-GET_WELL_PLAN.md  02-PHASE1_TASKS.md  03-STATUS_REPORT.md  04-PHASE1_COMPLETE.md  05-PHASE2_PLAN.md  06-PHASE2_COMPLETE.md  07-PHASE3_PLAN.md  08-PHASE3_COMPLETE.md  09-WORKFLOW_DISCIPLINE.md  10-QUICK_REFERENCE.md  11-FULL_CASCADE_RULE.md
orchestrator/src/cli/: main.py
orchestrator/src/core/: cost.py  exceptions.py  feedback.py  logging_config.py  metrics.py  orchestrator.py  parallel.py  retry.py
orchestrator/src/validators/: __init__.py  api_keys.py  models.py  startup.py  templates.py
orchestrator/templates/: 01-planner.md  02-l0-coder.md  03-reviewer.md  04-l1-coder.md  05-l2-coder.md
orchestrator/tests/e2e/: test_smoke.py
orchestrator/tests/unit/: test_file_tools.py  test_tool_executor.py  test_validators.py
scripts/: install-deps.sh  test-e2e.sh  test-integration.sh
(+227 files in other folders)
